# hogflare

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  wrangler.toml  wrangler.toml.example
.github/workflows/: ci.yml
scripts/: fake_pipeline.Dockerfile  fake_pipeline.py
src/: config.rs  extractors.rs  feature_flags.rs  groups.rs  lib.rs  main.rs  models.rs  persons.rs  pipeline.rs
tests/: persons_do.rs  pipeline_e2e.rs  posthog_endpoints.rs  posthog_js.rs  posthog_node.rs
tests/helpers/: mod.rs
tests/js_client/: package.json  posthog_capture.js  posthog_group.js  posthog_identify.js  posthog_multi.js  posthog_node_capture.js  posthog_node_flag_eligibility.js  posthog_node_flags.js  setup.js
