[package]
name = "hogflare"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }

[dev-dependencies]
serde_json = "1.0"
http-body-util = "0.1"
tower = "0.4"
