[package]
name = "hogflare"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
base64 = "0.22"
serde_urlencoded = "0.7"
flate2 = "1.0"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
subtle = "2.5"

[dev-dependencies]
serde_json = "1.0"
http-body-util = "0.1"
tower = "0.4"
