[package]
name = "hogflare"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json"] }
http = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
base64 = "0.22"
serde_urlencoded = "0.7"
flate2 = "1.0"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
subtle = "2.5"
tower-http = { version = "0.5", features = ["trace"] }
url = "2.5"
worker = { version = "0.7", features = ["http"] }
tower-service = "0.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "process", "net", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1.0"
http-body-util = "0.1"
